--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170525-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170525.csv.xz
+	execute: Periodic data update on 2017-05-25(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e60fa946f90bb959a542ef97359401ce204e71aa
+
 # Release 20170522-01
 
 ### New seed data
