--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170529-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170529.csv.xz
+	execute: Periodic data update on 2017-05-29(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/60224085fb31584c308380af61d72213646a1a00
+
 # Release 20170525-01
 
 ### New seed data
