--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170601-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170601.csv.xz
+	execute: Periodic data update on 2017-06-01(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/22019435f630aa327081b6dac2e5e70af9bf9877
+
 # Release 20170529-01
 
 ### New seed data
