--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170612-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170612.csv.xz
+	execute: Periodic data update on 2017-06-12(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/82f8c1f5d67fc940c22a42510de9543db6f96b05
+
 # Release 20170608-01
 
 ### New seed data
