--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170615-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170615.csv.xz
+	execute: Periodic data update on 2017-06-15(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/cd3b31daf139c1c5422c5517215290fefe9b5df8
+
 # Release 20170612-01
 
 ### New seed data
