--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170622-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170622.csv.xz
+	execute: Periodic data update on 2017-06-22(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/477ab62603e4ea99e2d1cae6f181b60977f51d06
+
 # Release 20170615-01
 
 ### New seed data
