--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170626-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170626.csv.xz
+	execute: Periodic data update on 2017-06-26(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/ae9da4984bd57a7a1b42a0ae96ca56b9f571e153
+
 # Release 20170622-01
 
 ### New seed data
