--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170630-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170630.csv.xz
+	execute: Periodic data update on 2017-06-30(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/f38c43016d88f6ec86de7333dbf9c2ff36555127
+
 # Release 20170626-01
 
 ### New seed data
