--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170703-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170703.csv.xz
+	execute: Periodic data update on 2017-07-3(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/9fe143d52d5492c1a0ca2a9c23c906cd96158f63
+
 # Release 20170630-01
 
 ### New seed data
