--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170706-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170706.csv.xz
+	execute: Periodic data update on 2017-07-06(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/31cbe03698e1d052e2d21a5d8ebd2acc3f4f3cf6
+
 # Release 20170703-01
 
 ### New seed data
