--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170710-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170710.csv.xz
+	execute: Periodic data update on 2017-07-10(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/182c8c4f23b42488cf6ca8a90ceeae5966cb27db
+
 # Release 20170706-01
 
 ### New seed data
@@ -9,7 +16,7 @@
 
 ### New seed data
 * seed/mecab-user-dict-seed.20170703.csv.xz
-	execute: Periodic data update on 2017-07-3(Mon)
+	execute: Periodic data update on 2017-07-03(Mon)
 	commit: https://github.com/neologd/mecab-unidic-neologd/commit/9fe143d52d5492c1a0ca2a9c23c906cd96158f63
 
 # Release 20170630-01
