--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170717-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170717.csv.xz
+	execute: Periodic data update on 2017-07-17(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/62e9d20f02f8be7d5d2af84344d3096d80560640
+
 # Release 20170710-01
 
 ### New seed data
