--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170727-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170727.csv.xz
+	execute: Periodic data update on 2017-07-27(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/577b57cbd8ff925b0991e6921ba037697bfaa8b5
+
 # Release 20170724-01
 
 ### New seed data
@@ -5,13 +12,12 @@
 	execute: Periodic data update on 2017-07-24(Mon)
 	commit: https://github.com/neologd/mecab-unidic-neologd/commit/0a58ed07d1af500f8e2dc0230259bec0104fcd21
 
- # Release 20170720-01
+# Release 20170720-01
 
 ### New seed data
 * seed/mecab-user-dict-seed.20170720.csv.xz
 	execute: Periodic data update on 2017-07-20(Thu)
 	commit: https://github.com/neologd/mecab-unidic-neologd/commit/705becb07f2a0daf48c2afec017dc7a5418c3af8
-
 
 # Release 20170717-01
 
