--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170803-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170803.csv.xz
+	execute: Periodic data update on 2017-08-03(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/8edd68c5a42cf23bf865ead7a4e7cfc2e2c53b3f
+
 # Release 20170731-01
 
 ### New seed data
