--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170807-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170807.csv.xz
+	execute: Periodic data update on 2017-08-07(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/4e85325bd1cb1bbe69e5fd0fbcaead74fdeea8f8
+
 # Release 20170803-01
 
 ### New seed data
