--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170814-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170814.csv.xz
+	execute: Periodic data update on 2017-08-14(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/d672625be40261a3183ff4fd4705289860bf09b3
+
 # Release 20170807-01
 
 ### New seed data
