--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170821-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170821.csv.xz
+	execute: Periodic data update on 2017-08-21(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/bdbe31953e232b44a1531fed2801b4708ec345c9
+
 # Release 20170814-01
 
 ### New seed data
