--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170907-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170907.csv.xz
+	execute: Periodic data update on 2017-09-07(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/f61b468bce0016fe0315a1409955d873c025e193
+
 # Release 20170904-01
 
 ### New seed data
