--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170911-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170911.csv.xz
+	execute: Periodic data update on 2017-09-11(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/d4af92141ae4636f387028ed137a06f65295c3ac
+
 # Release 20170907-01
 
 ### New seed data
