--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20170925-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20170925.csv.xz
+	execute: Periodic data update on 2017-09-25(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/84df136442d1b2ca5ad08b91f012e5545546e395
+
 # Release 20170921-01
 
 ### New seed data
