--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20171002-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20171002.csv.xz
+	execute: Periodic data update on 2017-10-02(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/31523081d2970b8efffd8132241fd9bed98ee7c5
+
 # Release 20170925-01
 
 ### New seed data
