--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20171009-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20171009.csv.xz
+	execute: Periodic data update on 2017-10-09(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/2e7483fccf3e2ed89677948fce5c02bfb1a2ab1e
+
 # Release 20171002-01
 
 ### New seed data
