--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20171012-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20171012.csv.xz
+	execute: Periodic data update on 2017-10-12(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/50da8ecbce52f134422ac2e75e967048f22ccacd
+
 # Release 20171009-01
 
 ### New seed data
