--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20171023-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20171023.csv.xz
+	execute: Periodic data update on 2017-10-23(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/b81a167ed2d7a1219e355e5fb505a87c891a4fce
+
 # Release 20171012-01
 
 ### New seed data
