--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20171102-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20171102.csv.xz
+	execute: Periodic data update on 2017-11-02(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c5336296234222712565c7d5cb969c6926258493
+
 # Release 20171030-01
 
 ### New seed data
