--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20171113-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20171113.csv.xz
+	execute: Periodic data update on 2017-11-13(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/2c91ab6b58d0cc8bab3e8fb54daffa8fe843f3fc
+
 # Release 20171109-01
 
 ### New seed data
