--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20171120-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20171120.csv.xz
+	execute: Periodic data update on 2017-11-20(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/8e9d3395f434ab8d79578605272ac829e1b5388c
+
 # Release 20171113-01
 
 ### New seed data
