--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20171204-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20171204.csv.xz
+	execute: Periodic data update on 2017-12-04(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c17744341f8c16846c5386387cac5450b4c672bb
+
 # Release 20171130-01
 
 ### New seed data
