--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20171228-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20171228.csv.xz
+	execute: Periodic data update on 2017-12-28(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/2034d8cef913374114a2096f1f693fcc717bb240
+
 # Release 20171225-01
 
 ### New seed data
