--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180115-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180115.csv.xz
+	execute: Periodic data update on 2018-01-15(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e9c087f70fe5a9fbafcfa8302db7db3664ce0ea0
+
 # Release 20180108-01
 
 ### New seed data
