--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180118-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180118.csv.xz
+	execute: Periodic data update on 2018-01-18(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/4036801ded70ac74e58788ba9f3a4588222246ba
+
 # Release 20180115-01
 
 ### New seed data
