--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180122-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180122.csv.xz
+	execute: Periodic data update on 2018-01-22(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/e6b494ff077b3b1e0b3e27139b57346ddef8ee7c
+
 # Release 20180118-01
 
 ### New seed data
