--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180201-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180201.csv.xz
+	execute: Periodic data update on 2018-02-01(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/fcc4b0cbfd0671400ece36e5e686281782f0c2fc
+
 # Release 20180125-01
 
 ### New seed data
