--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180208-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180208.csv.xz
+	execute: Periodic data update on 2018-02-08(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/55b95646b0dc0cb213e10cba72e67935993dcd18
+
 # Release 20180201-01
 
 ### New seed data
