--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180212-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180212.csv.xz
+	execute: Periodic data update on 2018-02-12(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/a32edb34547b2ff56d4240b5b40383d594b4e081
+
 # Release 20180208-01
 
 ### New seed data
