--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180222-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180222.csv.xz
+	execute: Periodic data update on 2018-02-22(Thu)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/32e06ec325a7df30c80281e829ffe5b8a84e9b88
+
 # Release 20180219-01
 
 ### New seed data
