--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180306-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180306.csv.xz
+	execute: Periodic data update on 2018-03-06(Mon)
+	commit: https://github.com/neologd/mecab-unidic-neologd/commit/c11efd36c182e64a5ab7ce3bcc3e1f54badef08f
+
 # Release 20180301-01
 
 ### New seed data
